# tp_notification

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
notification_service/: celery.py  settings.py  urls.py
notifications/: auth.py  tasks.py  urls.py  views.py
